# Assignment

./: .gitignore  CMakeLists.txt  Circuit.cpp  Circuit.h  ErrorHandler.h  Gate.cpp  Gate.h  GateType.h  PriorityQueue.h  Problem.docx  Simulation.cpp  Simulation.h  Simulator.cpp  Simulator.sln  Simulator.vcxproj  Simulator.vcxproj.filters  TruthTable.cpp  TruthTable.h
